--- a/1pr/КУРС_«Практикум_по_ETL»_2024.md
+++ b/1pr/КУРС_«Практикум_по_ETL»_2024.md
@@ -40,14 +40,7 @@ from unicodedata import normalize
 
 **Задание 1.1.** Зайти на сайт URL-адрес: https://data.mos.ru/opendata/60789?isDynamic=false
 
-**Задание 1.2.** Загрузить данные о `Wi-Fi в кинотеатрах` в Colab.
-
-
-```python
-from google.colab import files
-
-uploaded = files.upload()
-```
+**Задание 1.2.** Загрузить данные о `Wi-Fi в кинотеатрах` в среду.
 
 **Задание 1.3.** Считайте данные из файла CSV. Использовать метод `pandas read_csv` для простоты и скорости.
 
@@ -1727,118 +1720,5 @@ df_parquet.head()
 </table>
 </div>
 
-
-
-# Индивидуальное задание
-
-- Загрузить задание в среду colab.research
-
-- Выполнить задания `1-11`, результаты сохранить в файле `ПР_1_ФИО.ipynb`.
-
-- Выполнить парсинг веб-страниц с помощью Beautiful Soup и Pandas открытых источников данных:
-
-1. Сайт Мосбиржи — основной сайт инвестора. Очень много полезной информации о ценных бумагах, валютах — https://www.moex.com/
-
-2. Список биржевых инвестиционных фондов (ETF) на Московской бирже — https://www.moex.com/msn/etf
-
-3. Сайт Санкт-Петербургской биржи — https://spbexchange.ru/
-
-4. Список акций иностранных компаний, которые можно купить на Санкт-Петербургской бирже — http://stocks.spbexchange.ru/
-
-5. ETF от FinEx — https://finex-etf.ru/products/
-
-6. Котировки всех в мире акций, дивидендный календарь по акциям, курсы всех валют — https://ru.investing.com/
-
-7. Котировки и курсы акций в режиме реального времени с фильтром по тем странам, которые вас интересуют, — https://ru.investing.com/equities/
-
-8. Информация о дивидендах по российским акциям — https://www.dohod.ru/ik/analytics/dividend/
-
-9. Дивиденды российских и американских компаний — https://investmint.ru/
-
-10. Сервис с информацией по российским облигациям — https://bonds.finam.ru/
-
-11. Анализ российских облигаций — https://www.dohod.ru/analytic/bonds
-
-12. Котировки корпоративных облигаций — https://smart-lab.ru/q/bonds/
-
-13. Иностранные акции, инвестиционные идеи — https://finviz.com/
-
-14. Сервис для ведения портфеля ценных бумаг. Можно сделать публичный доступ и показать портфель своим друзьям, например — https://intelinvest.ru/
-
-15. Журнал «Тинькофф». Информация о финансах, инвестициях, бесплатное обучение — https://journal.tinkoff.ru/pro/invest/
-
-16. Обучающие курсы от Мосбиржи. Там же полезные сервисы в помощь инвесторам — https://red-circule.com/
-
-17. Новости компаний и новая информация по акциям — https://smart-lab.ru/news/
-
-18. Ожидаемые события фондового рынка — https://bcs-express.ru/ozhidaemye-sobytiya
-Подробнее на сайте Banki.ru https://www.banki.ru/news/lenta/?id=10936184
-
-19. Реестр сведений о банкротстве — https://bankrot.fedresurs.ru/
-
-20. Реестр доверенностей — https://www.reestr-dover.ru/
-
-21. Реестр уведомлений о залоге движимого имущества — https://www.reestr-zalogov.ru/state/index
-
-22. Узнать свою кредитную историю — https://www.nbki.ru/serviceszaem/svedeniya/
-
-23. Узнать задолженность на сайте ФССП. Не только свою — http://fssp.gov.ru/iss/ip/
-
-24. О пособиях для безработных в 2020 году — https://www.gosuslugi.ru/help/news/2020_05_08_work_pay
-
-25. Проект Банка России по финансовой грамотности — https://fincult.info/
-Подробнее на сайте Banki.ru https://www.banki.ru/news/lenta/?id=1093618
-
-- Выполнить парсинг коллекции данных на Портале открытых данных Правительства Москвы. Выявить показатели в наборе данных(изучить три датасета. Предоставить BI-табло результатов):
-
-1. Торговля.
-
-2. Дороги и транспорт.
-
-3. ЖКХ.
-
-4. Образование.
-
-5. Трудоустройство
-
-6. Здравоохранение.
-
-7. Социальная среда.
-
-8. Справочная информация.
-
-9. Земля и имущество.
-
-10. Культура.
-
-11. Досух и отдых.
-
-12. Предпринимательство.
-
-13. Торговля-2.
-
-14. Дороги и транспорт-2.
-
-15. ЖКХ-2.
-
-16. Образование-2.
-
-17. Трудоустройство-2.
-
-18. Здравоохранение-2.
-
-19. Социальная среда-2.
-
-20. Справочная информация-2.
-
-21. Земля и имущество-2.
-
-22. Культура-2.
-
-23. Досух и отдых-2.
-
-24. Предпринимательство-2.
-
-25. Торговля-3.
 
 
